testdata/baselines/reference/submodule/compiler/jsFileCompilationBindMultipleDefaultExports.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
a.js(1,22): error TS2528: A module cannot have multiple default exports.
a.js(1,22): error TS2528: A module cannot have multiple default exports.
a.js(3,15): error TS2528: A module cannot have multiple default exports.
a.js(3,15): error TS2528: A module cannot have multiple default exports.
a.js(3,16): error TS1109: Expression expected.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== a.js (5 errors) ====
    export default class a {
                         ~
!!! error TS2528: A module cannot have multiple default exports.
!!! related TS2753 a.js:3:15: Another export default is here.
                         ~
!!! error TS2528: A module cannot have multiple default exports.
!!! related TS2753 a.js:3:15: Another export default is here.
    }
    export default var a = 10;
                  
!!! error TS2528: A module cannot have multiple default exports.
!!! related TS2752 a.js:1:22: The first export default is here.
                  
!!! error TS2528: A module cannot have multiple default exports.
!!! related TS2752 a.js:1:22: The first export default is here.
                   ~~~
!!! error TS1109: Expression expected.